# DAWN

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: run_tests.yml
app/: .gitignore  CMakeLists.txt  DOMTreeErrorReporter.cpp  DOMTreeErrorReporter.h  Makefile  Result_xml_document.cpp  Result_xml_document.h  StrX.h  compilation_options.h  main.cpp  option_parser.cpp  option_parser.h  parser_options.h  print_result.h  run.cpp  run_degenerate_system_samples.mk  run_samples.mk  simulation_definition.cpp  simulation_definition.h  solver.h  xml_parser.cpp  xml_parser.h  xstr.h
app/include/: DOMTreeErrorReporter.h  Result_xml_document.h  StrX.h  option_parser.h  parser_options.h  run.h  simulation_definition.h  xstr.h
app/sample_input/: 2002_weather.xml  2005_weather.xml  biocro-system.miscanthus.2002.xml  biocro-system.miscanthus.xml  biocro-system.willow.2002.xml  biocro-system.willow.2005.xml  biocro-system.willow.xml  biocro-system.xml  harmonic_oscillator_system.xml  simulation_input.xsd
app/sample_input/degenerate-biocro-systems/: README  extraneous_initial_values.xml  minimal.xml  minimal_using_duration_element.xml  off-label-alt.xml  off-label.xml  only_drivers.xml
app/xml_schema/: drivers.xsd  dynamical-system.xsd  module-set.xsd  name.xsd  simulation-specification.xsd  solver.xsd  variable-settings.xsd  variable.xsd
cmake/: Doxygen.cmake
doc/: CMakeLists.txt  intro.md
script/: crop_models_to_xml.R
tests/: .gitignore  CMakeLists.txt  Makefile  run_app.h  test_regression.cpp  test_simulation_definition.cpp
tests/test_input/: duplicate_driver_variables.xml  duplicate_initial_state_variable_definition.xml  duplicate_parameter_definition.xml  inconsistent_driver_variables.xml  minimal_system.xml  no_driver_variables.xml
